Add server sent event functionality and docker image for container
