# api/docs/swagger.json
@@ -37,13 +37,6 @@
                 "summary": "Agent Register",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Session ID",
-                        "name": "sessionId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
                         "description": "Agent Register Request",
                         "name": "request",
                         "in": "body",
@@ -54,8 +47,8 @@
                     }
                 ],
                 "responses": {
-                    "202": {
-                        "description": "Accepted",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "type": "string"
                         }
@@ -205,16 +198,6 @@
                         }
                     }
                 }
-            }
-        },
-        "/ws": {
-            "get": {
-                "description": "returns websocket connection",
-                "tags": [
-                    "websocket"
-                ],
-                "summary": "Serve websocket",
-                "responses": {}
             }
         }
     },
