# api/internal/rest/websocket/client.go
@@ -1,79 +1,0 @@
-package websocket
-
-import (
-	"log/slog"
-	"sync"
-	"time"
-
-	"github.com/gorilla/websocket"
-)
-
-const (
-	writeWait      = 10 * time.Second
-	pongWait       = 60 * time.Second
-	pingPeriod     = (pongWait * 9) / 10
-	maxMessageSize = 512
-)
-
-type client struct {
-	hub  *Hub
-	id   ID
-	conn *websocket.Conn
-	send chan Message
-
-	mu *sync.Mutex
-}
-
-func (c *client) readPump() {
-	defer func() {
-		c.hub.unregister <- c.id
-		c.conn.Close()
-	}()
-
-	c.conn.SetReadLimit(maxMessageSize)
-	c.conn.SetReadDeadline(time.Now().Add(pongWait))
-	c.conn.SetPongHandler(func(string) error { c.conn.SetReadDeadline(time.Now().Add(pongWait)); return nil })
-
-	for {
-		_, _, err := c.conn.ReadMessage()
-		if err != nil {
-			if !websocket.IsUnexpectedCloseError(err, websocket.CloseGoingAway, websocket.CloseAbnormalClosure) {
-				slog.Error("error while reading message")
-			}
-			break
-		}
-	}
-}
-
-func (c *client) writePump() {
-	ticker := time.NewTicker(pingPeriod)
-	defer func() {
-		ticker.Stop()
-		c.conn.Close()
-	}()
-	for {
-		select {
-		case message, ok := <-c.send:
-			c.conn.SetWriteDeadline(time.Now().Add(writeWait))
-			if !ok {
-				_ = c.conn.WriteMessage(websocket.CloseMessage, []byte{})
-				return
-			}
-
-			c.mu.Lock()
-			err := c.conn.WriteJSON(message)
-			c.mu.Unlock()
-
-			if err != nil {
-				slog.Error("error while writing message", "error", err)
-				return
-			}
-		case <-ticker.C:
-			c.conn.SetWriteDeadline(time.Now().Add(writeWait))
-			if err := c.conn.WriteMessage(websocket.PingMessage, nil); err != nil {
-				slog.Error("error while writing ping message", "error", err)
-				return
-			}
-		}
-	}
-}
